# timing-analysis

./: .gitignore  CMakeLists.txt  README.md  draw.gnuplot  draw.sh  main.cpp  makefile
headers/: Channel.h
src/: AudioFile.h  Channel.cpp  main.cpp
